# qbl

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  PATENT_LANDSCAPE.md
docs/standard/: INDEX.md
docs/standard/chapters/: 01-introduction.md  02-lexical.md  03-types.md  04-gates.md  05-measurement.md  06-protocols.md  07-error-correction.md  08-compilation.md  09-stdlib.md  10-conformance.md  11-agentic.md  12-commerce.md
scripts/: absorb_knowledge.py
src/: demo.py  demo_agentic.py  demo_commerce.py  qbl_run.py
src/examples/: README.md  bell.qbl  dim13.qbl  feedback.qbl  ghz.qbl  grover.qbl  multi_backend.qbl  protected.qbl  teleport.qbl
src/qbl/: __init__.py  agentic.py  ai_parity.py  cli.py  commerce.py  compiler.py  errors.py  next_standard.py  parser.py  qudit.py  security.py  self_extend.py  simulator.py
src/qbl/applications/: __init__.py  norton_acquisition.py
src/qbl/backends/: __init__.py
src/qbl/core/: __init__.py  algebra.py  gates.py  types.py
src/qbl/discovered/: ABSORPTION_MANIFEST.json  MANIFEST.json  __init__.py
src/qbl/discovered/agentic/: __init__.py  multi_agent.py
src/qbl/discovered/ai/: __init__.py  mixture_of_experts.py  ppo.py  state_space_model.py
src/qbl/discovered/crypto/: __init__.py  falcon.py  ppo.py
src/qbl/frontier/: PARITY_REPORT.json  __init__.py  alignment.py  code_generation.py  efficiency.py  long_context.py  multimodal.py  reasoning.py  scaling.py  self_improvement.py  tool_use.py  world_models.py
src/qbl/protocols/: __init__.py
tests/: test_conformance.py
(+14 files in other folders)
